Create GeoTIFF file using GDAL instead of creating a PNG.
This allows for more flexibility. The GeoTIFF file contains the bounding box
and it contains the node count directly using more that the 8bit available
in PNGs.

--- a/node_density/Makefile
+++ b/node_density/Makefile
@@ -23,13 +23,15 @@ endif
 
 CXXFLAGS_WARNINGS := -Wall -Wextra -pedantic -Wredundant-decls -Wdisabled-optimization -Wctor-dtor-privacy -Wnon-virtual-dtor -Woverloaded-virtual -Wsign-promo -Wold-style-cast
 
-LIB_GD     := -lgd -lz -lm
 LIB_EXPAT  := -lexpat
 LIB_PBF    := -pthread -lz -lprotobuf-lite -losmpbf
 LIB_GZIP   := -lz
 LIB_BZIP2  := -lbz2
 
 LIB_IO     := $(LIB_EXPAT) $(LIB_PBF) $(LIB_GZIP) $(LIB_BZIP2)
+
+CFLAGS_GDAL := `gdal-config --cflags`
+LIB_GDAL    := `gdal-config --libs`
 
 PROGRAMS := node_density
 
@@ -38,7 +40,7 @@ PROGRAMS := node_density
 all: $(PROGRAMS)
 
 node_density: node_density.cpp
-	$(CXX) $(CXXFLAGS) $(CXXFLAGS_WARNINGS) -o $@ $< $(LDFLAGS) $(LIB_IO) $(LIB_GD)
+	$(CXX) $(CXXFLAGS) $(CXXFLAGS_WARNINGS) $(CFLAGS_GDAL) -o $@ $< $(LDFLAGS) $(LIB_IO) $(LIB_GDAL)
 
 clean:
 	rm -f *.o core $(PROGRAMS)
