Change cmake config to allow specifying C++ version to use.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,13 @@ project(osmium-contrib)
 cmake_minimum_required(VERSION 2.8.5)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-include(OsmiumOptions)
+include(common)
 
 find_package(Boost REQUIRED COMPONENTS program_options system filesystem)
 include_directories(${Boost_INCLUDE_DIRS})
 
 find_package(Osmium REQUIRED COMPONENTS io gdal proj sparsehash)
 include_directories(${OSMIUM_INCLUDE_DIRS})
-
-include(CppcheckTarget)
-add_cppcheck_target(**/*.cpp)
 
 macro(COMPILE_PROGRAM PROG)
   file(GLOB SOURCES ${PROG}/*.cpp ${PROG}/*.hpp)
