--- a/pub_names/CMakeLists.txt
+++ b/pub_names/CMakeLists.txt
@@ -8,7 +8,7 @@ project(osmium-pub-names)
 cmake_minimum_required(VERSION 2.8.5)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
-include(OsmiumOptions)
+include(common)
 
 find_package(Boost REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
@@ -16,8 +16,7 @@ include_directories(${Boost_INCLUDE_DIRS})
 find_package(Osmium REQUIRED COMPONENTS io sparsehash)
 include_directories(${OSMIUM_INCLUDE_DIRS})
 
-include(CppcheckTarget)
-add_cppcheck_target(*.*pp)
+#----------------------------------------------------------------------
 
 set(PROG pub_names)
 file(GLOB SOURCES *.cpp *.hpp)
