--- a/export_to_wkt/Makefile
+++ b/export_to_wkt/Makefile
@@ -1,44 +1,12 @@
-#------------------------------------------------------------------------------
-#
-#  You can set several environment variables before running make if you don't
-#  like the defaults:
-#
-#  CXX                - Your C++ compiler.
-#  CPLUS_INCLUDE_PATH - Include file search path.
-#  CXXFLAGS           - Extra compiler flags.
-#  LDFLAGS            - Extra linker flags.
-#  
-#------------------------------------------------------------------------------
 
-CXXFLAGS += -O3
-#CXXFLAGS += -g
-CXXFLAGS += -std=c++11 -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
-CXXFLAGS += -I../../libosmium/include
-
-OS:=$(shell uname -s)
-ifeq ($(OS),Darwin)
-	CXXFLAGS += -stdlib=libc++
-	LDFLAGS += -stdlib=libc++
-endif
-
-CXXFLAGS_WARNINGS := -Wall -Wextra -pedantic -Wredundant-decls -Wdisabled-optimization -Wctor-dtor-privacy -Wnon-virtual-dtor -Woverloaded-virtual -Wsign-promo -Wold-style-cast
-
-LIB_EXPAT  := -lexpat
-LIB_PBF    := -pthread -lz -lprotobuf-lite -losmpbf
-LIB_GZIP   := -lz
-LIB_BZIP2  := -lbz2
-
-LIB_IO     := $(LIB_EXPAT) $(LIB_PBF) $(LIB_GZIP) $(LIB_BZIP2)
-
-PROGRAMS := export_to_wkt
-
-.PHONY: all clean
-
-all: $(PROGRAMS)
-
-export_to_wkt: export_to_wkt.cpp
-	$(CXX) $(CXXFLAGS) $(CXXFLAGS_WARNINGS) -o $@ $< $(LDFLAGS) $(LIB_IO)
+all:
+	mkdir -p build && cd build && cmake .. && $(MAKE)
 
 clean:
-	rm -f *.o core $(PROGRAMS)
+	if test -d build; then cd build && $(MAKE) clean; fi
+
+distclean:
+	rm -fr build
+
+.PHONY: clean distclean
 
