--- a/export_to_wkt/CMakeLists.txt
+++ b/export_to_wkt/CMakeLists.txt
@@ -16,9 +16,22 @@ include_directories(${OSMIUM_INCLUDE_DIRS})
 
 include(common)
 
+enable_testing()
+
 #----------------------------------------------------------------------
 
 set(PROG export_to_wkt)
 file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
 target_link_libraries(${PROG} ${Boost_LIBRARIES} ${OSMIUM_LIBRARIES})
+
+add_test(NAME export_to_wkt
+         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+         COMMAND export_to_wkt ${CMAKE_CURRENT_SOURCE_DIR}/test/node.osm
+)
+set_tests_properties(export_to_wkt PROPERTIES
+                     PASS_REGULAR_EXPRESSION "n24960505 POINT\\(8\\.8720536 53\\.096629\\)\n"
+)
+
+
+#----------------------------------------------------------------------
