--- a/mapolution/CMakeLists.txt
+++ b/mapolution/CMakeLists.txt
@@ -16,6 +16,8 @@ include_directories(${OSMIUM_INCLUDE_DIRS})
 
 include(common)
 
+enable_testing()
+
 #----------------------------------------------------------------------
 
 if(HANDLER)
@@ -29,3 +31,14 @@ set(PROG mapolution)
 file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
 target_link_libraries(${PROG} ${Boost_LIBRARIES} ${OSMIUM_LIBRARIES})
+
+add_test(NAME mapolution_help
+         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+         COMMAND mapolution --help
+)
+set_tests_properties(mapolution_help PROPERTIES
+                     PASS_REGULAR_EXPRESSION "Usage: mapolution"
+)
+
+
+#----------------------------------------------------------------------
