--- a/amenity_list/CMakeLists.txt
+++ b/amenity_list/CMakeLists.txt
@@ -16,9 +16,22 @@ include_directories(${OSMIUM_INCLUDE_DIRS})
 
 include(common)
 
+enable_testing()
+
 #----------------------------------------------------------------------
 
 set(PROG amenity_list)
 file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
 target_link_libraries(${PROG} ${Boost_LIBRARIES} ${OSMIUM_LIBRARIES})
+
+add_test(NAME amenity_list_node
+         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+         COMMAND amenity_list ${CMAKE_CURRENT_SOURCE_DIR}/test/node.osm
+)
+set_tests_properties(amenity_list_node PROPERTIES
+                     PASS_REGULAR_EXPRESSION "  8\\.8721, 53\\.0966 post_office"
+)
+
+
+#----------------------------------------------------------------------
