--- a/pub_names/CMakeLists.txt
+++ b/pub_names/CMakeLists.txt
@@ -16,9 +16,22 @@ include_directories(${OSMIUM_INCLUDE_DIRS})
 
 include(common)
 
+enable_testing()
+
 #----------------------------------------------------------------------
 
 set(PROG pub_names)
 file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
 target_link_libraries(${PROG} ${Boost_LIBRARIES} ${OSMIUM_LIBRARIES})
+
+add_test(NAME pub_names
+         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+         COMMAND pub_names ${CMAKE_CURRENT_SOURCE_DIR}/test/pubs.osm
+)
+set_tests_properties(pub_names PROPERTIES
+                     PASS_REGULAR_EXPRESSION "^Im Holze\n$"
+)
+
+
+#----------------------------------------------------------------------
