--- a/pub_names/CMakeLists.txt
+++ b/pub_names/CMakeLists.txt
@@ -29,10 +29,8 @@ file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
 target_link_libraries(${PROG} ${Boost_LIBRARIES} ${OSMIUM_LIBRARIES})
 
-add_test(NAME pub_names
-         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-         COMMAND pub_names ${CMAKE_CURRENT_SOURCE_DIR}/test/pubs.osm
-)
+add_test(pub_names pub_names ${CMAKE_CURRENT_SOURCE_DIR}/test/pubs.osm)
+
 set_tests_properties(pub_names PROPERTIES
                      PASS_REGULAR_EXPRESSION "^Im Holze\n$"
 )
