Fix cppcheck target (but it only works with main cmake config).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,7 @@ add_subdirectory(pub_names)
 add_subdirectory(road_length)
 
 #-----------------------------------------------------------------------------
+include(CppcheckTarget)
+add_cppcheck_target(*/*.*pp)
+
+#-----------------------------------------------------------------------------
