Remove unused dependency on boost from CMake configs.

--- a/export_to_wkt/CMakeLists.txt
+++ b/export_to_wkt/CMakeLists.txt
@@ -7,10 +7,7 @@ cmake_minimum_required(VERSION 2.8.5)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
 
 include(add_dev_configuration)
-project(osmium-amenity-list)
-
-find_package(Boost REQUIRED)
-include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
+project(osmium-export-to-wkt)
 
 if(NOT DEFINED CMAKE_PREFIX_PATH)
     set(CMAKE_PREFIX_PATH "../../libosmium")
@@ -27,7 +24,7 @@ enable_testing()
 set(PROG export_to_wkt)
 file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
-target_link_libraries(${PROG} ${Boost_LIBRARIES} ${OSMIUM_LIBRARIES})
+target_link_libraries(${PROG} ${OSMIUM_LIBRARIES})
 
 
 add_test(export_to_wkt export_to_wkt ${CMAKE_CURRENT_SOURCE_DIR}/test/node.osm)
