Add -pthread compiler and linker options.
This should fix a problem where some linker versions will not link
binaries correctly when the --as-needed option is used.

--- a/dense_tiles/CMakeLists.txt
+++ b/dense_tiles/CMakeLists.txt
@@ -25,7 +25,7 @@ set(PROG dense_tiles)
 file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
 target_link_libraries(${PROG} ${OSMIUM_LIBRARIES})
-
+set_pthread_on_target(${PROG})
 
 add_test(dense_tiles dense_tiles --help)
 
