--- a/mapolution/CMakeLists.txt
+++ b/mapolution/CMakeLists.txt
@@ -35,6 +35,7 @@ set(PROG mapolution)
 file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
 target_link_libraries(${PROG} ${Boost_LIBRARIES} ${OSMIUM_LIBRARIES})
+set_pthread_on_target(${PROG})
 
 add_test(mapolution_help mapolution --help)
 
