--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,16 @@
 
 language: generic
 
-sudo: false
-
 dist: trusty
+
+#-----------------------------------------------------------------------------
+
+addons:
+  homebrew:
+    packages:
+      - cmake
+      - boost
+    update: true
 
 #-----------------------------------------------------------------------------
 
@@ -17,29 +24,12 @@ matrix:
 
     # 1/ Linux Clang Builds
     - os: linux
-      compiler: linux-clang38-release
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['clang-3.8', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='clang++-3.8' BUILD_TYPE='Release'
-
-    - os: linux
       compiler: linux-clang38-dev
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['clang-3.8', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='clang++-3.8' BUILD_TYPE='Dev'
-
-
-    - os: linux
-      compiler: linux-clang39-release
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['clang-3.9', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='clang++-3.9' BUILD_TYPE='Release'
+      env: CXX='clang++-3.8' BUILD_TYPE='Dev'
 
     - os: linux
       compiler: linux-clang39-dev
@@ -47,16 +37,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['clang-3.9', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='clang++-3.9' BUILD_TYPE='Dev'
-
-
-    - os: linux
-      compiler: linux-clang40-release
-      addons:
-        apt:
-          sources: ['llvm-toolchain-trusty-4.0', 'ubuntu-toolchain-r-test']
-          packages: ['clang-4.0', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='clang++-4.0' BUILD_TYPE='Release'
+      env: CXX='clang++-3.9' BUILD_TYPE='Dev'
 
     - os: linux
       compiler: linux-clang40-dev
@@ -64,16 +45,7 @@ matrix:
         apt:
           sources: ['llvm-toolchain-trusty-4.0', 'ubuntu-toolchain-r-test']
           packages: ['clang-4.0', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='clang++-4.0' BUILD_TYPE='Dev'
-
-
-    - os: linux
-      compiler: linux-clang50-release
-      addons:
-        apt:
-          sources: ['llvm-toolchain-trusty-5.0', 'ubuntu-toolchain-r-test']
-          packages: ['clang-5.0', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='clang++-5.0' BUILD_TYPE='Release'
+      env: CXX='clang++-4.0' BUILD_TYPE='Dev'
 
     - os: linux
       compiler: linux-clang50-dev
@@ -81,34 +53,42 @@ matrix:
         apt:
           sources: ['llvm-toolchain-trusty-5.0', 'ubuntu-toolchain-r-test']
           packages: ['clang-5.0', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='clang++-5.0' BUILD_TYPE='Dev'
+      env: CXX='clang++-5.0' BUILD_TYPE='Dev'
+
+    - os: linux
+      dist: xenial
+      compiler: linux-clang6-dev
+      addons:
+        apt:
+          sources: [ 'ubuntu-toolchain-r-test' ]
+          packages: ['libboost-dev', 'libboost-filesystem-dev', 'libboost-program-options-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev', 'gcc-6', 'g++-6', 'clang-6']
+      env: CC='clang-6' CXX='clang++-6' BUILD_TYPE='Dev'
+
+    - os: linux
+      dist: bionic
+      compiler: linux-clang7-dev
+      addons:
+        apt:
+          packages: ['libboost-dev', 'libboost-filesystem-dev', 'libboost-program-options-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev', 'clang-7']
+      env: CC='clang-7' CXX='clang++-7' BUILD_TYPE='Dev'
+
+    - os: linux
+      dist: bionic
+      compiler: linux-clang7-release
+      addons:
+        apt:
+          packages: ['libboost-dev', 'libboost-filesystem-dev', 'libboost-program-options-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev', 'clang-7']
+      env: CC='clang-7' CXX='clang++-7' BUILD_TYPE='Release'
 
 
     # 2/ Linux GCC Builds
-    - os: linux
-      compiler: linux-gcc48-release
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.8', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='g++-4.8' COMPILER_FLAGS='-Wno-return-type' BUILD_TYPE='Release'
-
     - os: linux
       compiler: linux-gcc48-dev
       addons:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.8', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='g++-4.8' COMPILER_FLAGS='-Wno-return-type' BUILD_TYPE='Dev'
-
-
-    - os: linux
-      compiler: linux-gcc49-release
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-4.9', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='g++-4.9' BUILD_TYPE='Release'
+      env: CXX='g++-4.8' CXXFLAGS='-Wno-return-type' BUILD_TYPE='Dev'
 
     - os: linux
       compiler: linux-gcc49-dev
@@ -116,16 +96,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-4.9', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='g++-4.9' BUILD_TYPE='Dev'
-
-
-    - os: linux
-      compiler: linux-gcc5-release
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-5', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='g++-5' BUILD_TYPE='Release'
+      env: CXX='g++-4.9' BUILD_TYPE='Dev'
 
     - os: linux
       compiler: linux-gcc5-dev
@@ -133,16 +104,7 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-5', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='g++-5' BUILD_TYPE='Dev'
-
-
-    - os: linux
-      compiler: linux-gcc6-release
-      addons:
-        apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-6', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='g++-6' BUILD_TYPE='Release'
+      env: CXX='g++-5' BUILD_TYPE='Dev'
 
     - os: linux
       compiler: linux-gcc6-dev
@@ -150,62 +112,67 @@ matrix:
         apt:
           sources: ['ubuntu-toolchain-r-test']
           packages: ['g++-6', 'libboost1.55-dev', 'libboost-filesystem1.55-dev', 'libboost-program-options1.55-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
-      env: COMPILER='g++-6' BUILD_TYPE='Dev'
+      env: CXX='g++-6' BUILD_TYPE='Dev'
+
+    - os: linux
+      dist: bionic
+      compiler: linux-gcc7-dev
+      addons:
+        apt:
+          packages: ['libboost-dev', 'libboost-filesystem-dev', 'libboost-program-options-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
+      env: CXX='g++-7' BUILD_TYPE='Dev'
+
+    - os: linux
+      dist: bionic
+      compiler: linux-gcc7-release
+      addons:
+        apt:
+          packages: ['libboost-dev', 'libboost-filesystem-dev', 'libboost-program-options-dev', 'libgdal-dev', 'libproj-dev', 'libsparsehash-dev']
+      env: CXX='g++-7' BUILD_TYPE='Release'
 
 
     # 3/ OSX Clang Builds
     - os: osx
-      osx_image: xcode6.4
-      compiler: xcode64-clang-release
-      env: COMPILER='clang++' BUILD_TYPE='Release'
-
-    - os: osx
-      osx_image: xcode6.4
-      compiler: xcode64-clang-dev
-      env: COMPILER='clang++' BUILD_TYPE='Dev'
-
-
-    - os: osx
-      osx_image: xcode7
-      compiler: xcode7-clang-release
-      env: COMPILER='clang++' BUILD_TYPE='Release'
-
-    - os: osx
-      osx_image: xcode7
-      compiler: xcode7-clang-dev
-      env: COMPILER='clang++' BUILD_TYPE='Dev'
-
-
-    - os: osx
-      osx_image: xcode8.3
-      compiler: xcode8-clang-release
-      env: COMPILER='clang++' BUILD_TYPE='Release'
-
-    - os: osx
       osx_image: xcode8.3
       compiler: xcode8-clang-dev
-      env: COMPILER='clang++' BUILD_TYPE='Dev'
+      env: CXX='clang++' BUILD_TYPE='Dev'
+
+    - os: osx
+      osx_image: xcode9.4
+      compiler: xcode9-clang-dev
+      env: CXX='clang++' BUILD_TYPE='Dev'
+
+    - os: osx
+      osx_image: xcode10.2
+      compiler: xcode10-clang-dev
+      env: CXX='clang++' BUILD_TYPE='Dev'
+
+    - os: osx
+      osx_image: xcode11
+      compiler: xcode11-clang-release
+      env: CXX='clang++' BUILD_TYPE='Release'
+
+    - os: osx
+      osx_image: xcode11
+      compiler: xcode11
+      env: CXX='clang++' BUILD_TYPE='Dev'
 
 #-----------------------------------------------------------------------------
 
 install:
   - git clone --quiet --depth 1 https://github.com/osmcode/libosmium.git ../libosmium
   - git clone --quiet --depth 1 https://github.com/mapbox/protozero.git ../protozero
-  - |
-    if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
-      brew install cmake boost || true
-    fi
   - cmake --version
 
 before_script:
   - cd ${TRAVIS_BUILD_DIR}
   - mkdir build && cd build
-  - CXX=${COMPILER} CXXFLAGS=${COMPILER_FLAGS} cmake -LA .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+  - cmake -LA .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
 
 script:
   - make VERBOSE=1 && ctest --output-on-failure
   # build and test each subproject by itself
   - cd $TRAVIS_BUILD_DIR
-  - CXX=${COMPILER} CXXFLAGS=${COMPILER_FLAGS} ./cmake/build_subprojects.sh ${BUILD_TYPE}
+  - ./cmake/build_subprojects.sh ${BUILD_TYPE}
 
 #-----------------------------------------------------------------------------
