Github actions: Modernize CI

--- a/.github/actions/install-ubuntu/action.yml
+++ b/.github/actions/install-ubuntu/action.yml
@@ -10,6 +10,7 @@ runs:
              libboost-dev \
              libboost-filesystem-dev \
              libboost-program-options-dev \
+             libbz2-dev \
              libgdal-dev \
              libproj-dev \
              libsparsehash-dev
