Do not install unused libraries

--- a/.github/actions/install-ubuntu/action.yml
+++ b/.github/actions/install-ubuntu/action.yml
@@ -11,8 +11,5 @@ runs:
              libboost-filesystem-dev \
              libboost-program-options-dev \
              libbz2-dev \
-             libgdal-dev \
-             libproj-dev \
-             libsparsehash-dev
+             libgdal-dev
       shell: bash
-
