export_to_wkt: Remove unused check for boost

--- a/export_to_wkt/CMakeLists.txt
+++ b/export_to_wkt/CMakeLists.txt
@@ -15,9 +15,6 @@ endif()
 find_package(Osmium 2.13.1 REQUIRED COMPONENTS io)
 include_directories(SYSTEM ${OSMIUM_INCLUDE_DIRS})
 
-find_package(Boost 1.55.0)
-include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
-
 include(common)
 
 enable_testing()
@@ -27,7 +24,7 @@ enable_testing()
 set(PROG export_to_wkt)
 file(GLOB SOURCES *.cpp *.hpp)
 add_executable(${PROG} ${SOURCES})
-target_link_libraries(${PROG} ${Boost_LIBRARIES} ${OSMIUM_LIBRARIES})
+target_link_libraries(${PROG} ${OSMIUM_LIBRARIES})
 set_pthread_on_target(${PROG})
 
 add_test(export_to_wkt export_to_wkt ${CMAKE_CURRENT_SOURCE_DIR}/test/node.osm)
