Update CMakeLists.txt boost check
For newer CMake versions

--- a/node_density/CMakeLists.txt
+++ b/node_density/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 include(add_dev_configuration)
 project(osmium-node-density)
 
-find_package(Boost REQUIRED COMPONENTS program_options)
+find_package(Boost CONFIG REQUIRED COMPONENTS program_options)
 include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 
 if(NOT DEFINED CMAKE_PREFIX_PATH)
